Moved app to use picocli library, added tests and CI components