@@ -11,26 +11,38 @@ buildscript {
 
     }
     dependencies {
-        classpath "com.commercehub.gradle.plugin:gradle-avro-plugin:0.9.1"
         classpath "org.jfrog.buildinfo:build-info-extractor-gradle:latest.release"
     }
+}
+
+plugins {
+    id("io.freefair.lombok") version "8.12.1"
 }
 
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: "eclipse"
-apply plugin: "com.jfrog.artifactory"
-
 
 allprojects {
     tasks.withType(JavaCompile) {
         sourceCompatibility = '24'
         targetCompatibility = '24'
+        options.compilerArgs << "-proc:full"
     }
 }
 
 wrapper {
     gradleVersion = '8.14.2'
+}
+
+tasks.named('test', Test) {
+    useJUnitPlatform()
+
+    maxHeapSize = '1G'
+
+    testLogging {
+        events "passed"
+    }
 }
 
 group = "com.r1chjames"
@@ -48,6 +60,13 @@ dependencies {
             "io.confluent:kafka-streams-avro-serde:${confluentVersion}",
             "io.confluent:kafka-schema-registry:${confluentVersion}",
             "org.apache.kafka:kafka-clients:${kafkaVersion}",
-            "commons-cli:commons-cli:1.9.0"
+            "info.picocli:picocli:4.7.7"
     )
+
+    testImplementation(platform("org.junit:junit-bom:5.13.1"),
+            "org.junit.jupiter:junit-jupiter",
+            "org.assertj:assertj-core:4.0.0-M1",
+            "org.mockito:mockito-core:5.18.0")
+    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
+
 }
